dev: update CDN

--- a/plugin/webterminal/index.html
+++ b/plugin/webterminal/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RHILEX Terminal</title>
     <!-- 引入 xterm.css -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xterm@4.19.0/css/xterm.css">
+    <link rel="stylesheet" href="https://unpkg.com/xterm@4.19.0/css/xterm.css">
     <style>
         /* 全局样式 */
         body {
@@ -178,8 +178,8 @@
         }
     </style>
     <!-- 引入 xterm.js 和 xterm-addon-fit.js -->
-    <script src="https://cdn.jsdelivr.net/npm/xterm@4.19.0/lib/xterm.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/xterm-addon-fit@0.7.0/lib/xterm-addon-fit.js"></script>
+    <script src="https://unpkg.com/xterm@4.19.0/lib/xterm.js"></script>
+    <script src="https://unpkg.com/xterm-addon-fit@0.7.0/lib/xterm-addon-fit.js"></script>
 </head>
 
 <body>
